--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@
 }
 
 .links li {
-  background-color: white;
+  background-color: #C8C8C8;
   cursor: pointer;
   padding: 5px;
   display: inline;
